--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="base" class="">
 
       <div id="u603" class="ax_default text_field" data-label="*******">
-        <img id="u603_img" class="img " src="images/navegacao/________u603.png"/>
+        <img id="u603_img" class="img " src="images/navegacao/u603.png"/>
       </div>
 
       <div id="u604" class="ax_default text_field" data-label="senha">
@@ -40,7 +40,7 @@
       </div>
 
       <div id="u608" class="ax_default text_field" data-label="*******">
-        <img id="u608_img" class="img " src="images/navegacao/________u608.png"/>
+        <img id="u608_img" class="img " src="images/navegacao/u608.png"/>
       </div>
 
       <div id="u609" class="ax_default text_field" data-label="senha">
